syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "protobuf/gogoproto/gogo.proto";


package storage;

message NamespaceMetadata {
    string              id                  = 1 [(gogoproto.moretags) = "search:\"Namespace ID\""];
    string              name                = 2 [(gogoproto.moretags) = "search:\"Namespace,store\""];
    string              cluster_id          = 3 [(gogoproto.moretags) = "search:\"Cluster ID,hidden,store\""];
    string              cluster_name        = 4 [(gogoproto.moretags) = "search:\"Cluster\""];
    map<string, string> labels              = 5 [(gogoproto.moretags) = "search:\"Label\""];
    google.protobuf.Timestamp creation_time = 6;
}
